fix hero header on iphone devices

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -77,10 +77,10 @@ body {
   align-items: center;
   position: relative;
   &__content {
-    width: 400px;
+    width: 320px;
   }
   &__header {
-    font-size: 50px;
+    font-size: 38px;
     color: #fff;
     margin-bottom: 12px;
     position: relative;
